# fast-analytics

./: .app.env.example  Dockerfile  README.md  compose.yml  pyproject.toml
fastanalytics/: __init__.py  __main__.py
fastanalytics/config/: __init__.py  environments.py
fastanalytics/db/: __init__.py  engine.py
fastanalytics/db/timescale/: functions.py
fastanalytics/entrypoints/: __init__.py  asgi.py  logger.py
fastanalytics/routes/: __init__.py  health.py
scripts/: docker-entrypoint.sh  entrypoint.sh  setup.sh
src/fastanalytics/: __main__.py  _types.py  depends.py  utils.py
src/fastanalytics/config/: constants.py
src/fastanalytics/db/: activator.py
src/fastanalytics/db/timescale/: hypertables.py  schemas.py  statements.py  utils.py
src/fastanalytics/middleware/: logger.py
src/fastanalytics/models/: __init__.py  base.py  events.py  utils.py
src/fastanalytics/routes/: __init__.py  events.py
src/fastanalytics/schemas/: __init__.py  _base.py  events.py  queries.py  responses.py
